tests/cases/memory/ok/zone-associated-new.ari
pub struct Point {
  x: i64,
  y: i64,
}

pub impl Point {
  fn new(zone: ref mut Zone, x: i64, y: i64) -> ptr Point {
    zone::new<Point>(zone, Point { x: x, y: y })
  }
}

fn main() -> i64 {
  var zone = zone::create(128);
  let point = Point::new(ref mut zone, 4, 8);
  let result = (*point).x + (*point).y;
  zone::destroy(zone);
  result
}
